--- a/coach_espacio/composer.json
+++ b/coach_espacio/composer.json
@@ -7,9 +7,9 @@
     "require": {
         "php": ">=5.6.4",
         "cviebrock/eloquent-sluggable": "^4.2",
+        "doctrine/dbal": "^2.5",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-        "doctrine/dbal": "v2.5.12"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.6",
